# swarms-harness

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.es.md  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml  rulesync.jsonc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/hooks/: dcg.json
.github/skills/: .skillshare-manifest.json
.github/workflows/: ci.yml
.rulesync/: README.md  mcp.json
.rulesync/rules/: swarm-coordination.md  swarms-global.md
.rulesync/skills/swarms-coordination/: SKILL.md
.skillshare/: config.yaml
.skillshare/skills/multi-provider-agent-orchestration/: SKILL.md
.skillshare/skills/multi-provider-agent-orchestration/agents/: openai.yaml
.skillshare/skills/swarms/: SKILL.md
.skillshare/skills/swarms-project-coordination/: SKILL.md
.skillshare/skills/swarms/agents/: openai.yaml
config/: model_pricing_catalog.json  role_policy.json  swarm_router.json  swarm_router.local.example.json  workflow_policy.json
docs/: ADD_A_PROVIDER.md  AGENT_PREFLIGHT.md  AGY_PROGRAMMATIC.md  CONFIG.md  DYNAMIC_WORKFLOWS.md  LIMITATIONS.md  LONG_RUNNING_TASKS.md  LONG_RUNNING_TASKS_REVIEW.md  PLANNING_ARCHITECTURE.md  PLATFORM.md  PROVIDER_STATUS.md  PUBLISHING.md  ROADMAP.md  RUST_RUNTIME.md  SECURITY.md  SKILL_INSTALL.md  STATE_CONTRACT.md  SWARM_UI.md  SWARM_UI_BUILD_ENVIRONMENT_AUDIT.md  SWARM_UI_CONTRACT.md  UI_RUNTIME_EVALUATION.md  agentic_swarm_micro_tasks.json  dataviz_container_audit_retry.json  dataviz_control_plane_container.json  dataviz_long_task_recovery.json  dataviz_observability_recovery.json  dataviz_public_packaging.json  dataviz_ui_build_environment_audit.json  dataviz_ui_observability_followup.json  dataviz_ui_repair.json  mindside_meendy_swarm_plan.json  mindsight_meendy_swarm_plan.json  swebench_pallets_flask_tasks.json  swebench_psf_requests_tasks.json  tableau-linux-research-plan.json  workflow_plan_dynamic_example.json  workflow_plan_example.json
docs/codex/plans/: PLAN_AGENT_PREFLIGHT.md  PLAN_DYNAMIC_WORKFLOWS_AND_CONTEXT_SYNC.md  PLAN_PROVIDER_SESSION_CACHE_RETENTION.md
docs/research/: linux-node-installation-guide.md
docs/superpowers/plans/: 2026-07-17-ui-marraqueta-restyle.md
docs/superpowers/specs/: 2026-07-17-ui-marraqueta-restyle-design.md
docs/technical/: PROVIDER_SESSION_CACHE_RETENTION.md  magnitude_architecture_lessons.md  swarm_token_savings_benchmark_plan.md  swarms_token_telemetry_industry_review_20260618.md
rust/: Cargo.toml
rust/assets/provider-icons/: SOURCES.md
rust/src/: adapter.rs  app.rs  cli.rs  config.rs  lib.rs  main.rs  model.rs  quota.rs  resources.rs  review.rs  runtime.rs  session.rs  steering.rs  telemetry.rs  tests.rs  ui_bin.rs  ui_main.rs  ui_theme.rs  workflow_ir.rs
rust/tests/: ui_state.rs
scripts/: __init__.py  agent_preflight.py  agy_call.py  architect.py  codex_worker.py  context_sync.py  doctor.py  gemini_worker.py  goal_evaluator.py  hermes_worker.py  kilo_worker.py  mock_worker.py  openai_compat_worker.py  opencode_worker.py  parallel_swarm.ps1  paths.py  plan_review.py  provider_session.py  record_metric.py  run_agentic_swarm_benchmark.py  run_observability.py  run_swarm_benchmark.py  scout_limits.py  smart_router.py  start_singularity.ps1  start_singularity_v2.ps1  summarize_telemetry.py  summarizer.py  swarm.py  sync_multi_provider_skill.py  task_cleanup.py  validate_agent.py  workflow_ir.py  workflow_runtime.py
scripts/utils/: token_telemetry.py
skills/: .skillshare-manifest.json
skills/multi-provider-agent-orchestration/: SKILL.md
skills/multi-provider-agent-orchestration/references/: transafeticket-swarms-lessons.md
skills/swarms/: SKILL.md
skills/swarms/agents/: openai.yaml
tests/: test_agent_preflight.py  test_agentic_swarm_benchmark.py  test_agy_call.py  test_codex_worker.py  test_context_sync.py  test_gemini_worker.py  test_hermes_worker.py  test_kilo_worker.py  test_openai_compat_worker.py  test_opencode_worker.py  test_plan_review.py  test_run_observability.py  test_skill_sync.py  test_smart_router.py  test_swarm_cli.py  test_token_telemetry.py  test_workflow_ir.py  test_workflow_runtime.py
